# undis

./: Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml
examples/: flushall.rs  raw_channel.rs  raw_connection.rs  with_client.rs
runcmd/: Cargo.toml  README.md
runcmd/src/: main.rs
src/: client.rs  command.rs  connection.rs  connector.rs  lib.rs  resp3.rs  serde_helper.rs
src/client/: hash.rs  serde_helper.rs  tests.rs
src/client/serde_helper/: ensure_scalar.rs  ensure_sequence.rs
src/command/: base.rs  hash.rs  strings.rs
src/connection/: hash.rs  serde_helper.rs
src/connection/serde_helper/: ensure_map_like.rs  ensure_sequence.rs  struct_fields.rs
src/resp3/: de.rs  double.rs  ser.rs  ser_cmd.rs  token.rs  value.rs
src/serde_helper/: ensure_map_like.rs  ensure_scalar.rs  ensure_sequence.rs  entry.rs  struct_fields.rs
test-helper/: Cargo.toml
test-helper/src/: lib.rs
