[package]
name = "undis"
version = "0.1.0"
authors = ["HyeonuPark <nemo1275@gmail.com>"]
edition = "2021"

[dependencies]
async-trait = "0.1"
bstr = { version = "0.2", features = ["serde1"] }
bytes = "1.0"
deadpool = { version = "0.9", features = ["managed", "rt_tokio_1"], default-features = false }
indexmap = "1.7"
itoa = "0.4"
memchr = "2.4"
once_cell = "1.8"
paste = "1.0"
ryu = "1.0"
serde = "1.0"
thiserror = "1.0"
tokio = { version = "1.14", features = ["io-util", "net"] }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.14", features = ["rt", "macros"] }
