[package]
name = "undis"
version = "0.1.0"
authors = ["HyeonuPark <nemo1275@gmail.com>"]
edition = "2021"

[dependencies]
async-channel = "1.6"
bstr = { version = "0.2", features = ["serde1"] }
bytes = "1.0"
futures-core = "0.3"
indexmap = "1.7"
itoa = "1.0"
memchr = "2.4"
once_cell = "1.8"
paste = "1.0"
ryu = "1.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1.14", features = ["io-util", "net", "sync", "macros"] }

[dev-dependencies]
serde_json = "1.0"
tokio = { version = "1.14", features = ["rt"] }
helper = { path = "./test-helper" }

[workspace]
members = [ "test-helper", "runcmd" ]
